login,profile,notifacation,repositories页面

--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
-	"appid": "wxfd46308cd24919a4",
+	"appid": "wx81dd9353377ca0bd",
 	"projectname": "code-pocket",
 	"isGameTourist": false,
 	"condition": {
