--- a/src/app.json
+++ b/src/app.json
@@ -8,7 +8,8 @@
     "pages/login/main",
     "pages/counter/main",
     "pages/repositories/main",
-    "pages/profile/main"
+    "pages/profile/main",
+    "pages/repo/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
