--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^1.29.0",
     "mpvue": "^1.0.11",
     "octicons": "^8.1.0",
     "vuex": "^3.0.1",
