--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
+    "js-base64": "^2.4.9",
+    "marked": "^0.5.1",
     "mpvue": "^1.0.11",
+    "mpvue-wxparse": "^0.6.5",
     "octicons": "^8.1.0",
     "vuex": "^3.0.1",
     "wx": "0.0.36"
